--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/react-datepicker": "^6.2.0",
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-big-calendar": "^1.13.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
