--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.51.16",
     "@tanstack/react-query-devtools": "^5.51.18",
     "@types/react-datepicker": "^6.2.0",
+    "apexcharts": "^3.52.0",
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
